--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-icons": "^5.5.0",
     "shiki": "^3.7.0",
     "tailwind-merge": "^3.0.2",
+    "vanilla-cookieconsent": "^3.1.0",
     "wrangler": "latest"
   },
   "devDependencies": {
