--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "sharp": "^0.34.4",
     "shiki": "^3.7.0",
     "tailwind-merge": "^3.0.2",
     "vanilla-cookieconsent": "^3.1.0",
@@ -56,6 +57,7 @@
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.18.0",
     "astro-eslint-parser": "^1.2.2",
+    "bun-types": "^1.3.0",
     "eslint": "^8.57.1",
     "eslint-import-resolver-typescript": "^4.3.4",
     "eslint-plugin-astro": "^0.31.4",
